# End-to-End-LLM-Project-using-RAG

./: README.md  docker-compose.yml
.github/worklows/: build-and-deploy.yml
backend/: Dockerfile  Readme-backend.md  pyproject.toml  requirements.txt  vector_db.sqlite
backend/app/: .env  main.py  models.py
backend/app/routers/: ingestion.py  search.py
backend/app/services/: db_init.py  summarizer.py  vector_db.py
frontend/: Dockerfile  Readme-frontend.md  app.py  package.json
frontend/src/: App.js
frontend/src/components/: DocumentUpload.js  SearchInput.js  SearchResult.js
frontend/static/css/: styles.css
frontend/static/js/: scripts.js
frontend/templates/: index.html
ingestion/: Dockerfile  ingestion_service.py  pyproject.toml  vector_db.sqlite
kubernetes/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingestion-deployment.yaml  ingestion-service.yaml  kustomization.yaml  model-deployment.yaml  model-service.yaml
model/: Dockerfile  model_service.py  pyproject.toml  requirements.txt
