[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["RoboMaroof <maroofkanakkayil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
